# fools-gambit

./: CMakeLists.txt  LICENSE  README.md
.claude/: settings.local.json
docs/: fools-gambit-roadmap.md
src/: main.cpp
src/board/: bitboard.h  chess_board.cpp  chess_board.h  color.h  piece.h  piece_type.h  square.h
src/movegen/: flag.h  move.h
tests/: test_main.cpp
tests/board/: test_bitboard.cpp  test_board.cpp  test_move.cpp
